--- a/index.html
+++ b/index.html
@@ -17,9 +17,29 @@
                 <li class="nav-item"><a href="" class="nav-link text-gray">Login</a></li>
             </ul>
         </nav>
+        <div class="bannar">
+            <div class="bannar-content">
+                <h1 class="bannar-title">Brand New Group of Architects</h1>
+                <p class="bannar-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+            <img class="bannar-img" src="images/banner.png" alt="">
+        </div>
     </header>
     <main>
-
+        <section class="teams display-flex">
+            <div class="team-img-container">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="our-features">
+                <h3 class="feature-title"><span id="Quick-list" class="text-lightgray">Quick list</span> of Our <span class="text-primary">Features</span></h3>
+                <p class="feature-discription text-lightgray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
     </main>
     <footer>
 
