--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         </div>
     </header>
     <main>
+        <!-- team and features -->
         <section class="teams display-flex">
             <div class="team-img-container">
                 <img src="images/team1.png" alt="">
@@ -35,9 +36,62 @@
                 <img src="images/team4.png" alt="">
             </div>
             <div class="our-features">
-                <h3 class="feature-title"><span id="Quick-list" class="text-lightgray">Quick list</span> of Our <span class="text-primary">Features</span></h3>
+                <h3 class="section-title"><span id="Quick-list" class="text-lightgray">Quick list</span> of Our <span class="text-primary">Features</span></h3>
                 <p class="feature-discription text-lightgray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                 <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
+        <!-- features we enjoy -->
+        <section>
+
+        </section>
+        <!-- some facts -->
+        <section class="some-facts">
+            <h3 class="section-title">Some Facts</h3>
+            <p class="fact-discription text-lightgray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            <div class="facts-container">
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/ribon.png" alt="Ribon icon" class="fact-icon">
+                        <h4 class="fact-number">54</h4>
+                        <h5 class="fact-name">Awards Winnings</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/projects.png" alt="Project icon" class="fact-icon">
+                        <h4 class="fact-number">1458</h4>
+                        <h5 class="fact-name">Project Finished</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/customers.png" alt="Customers icon" class="fact-icon">
+                        <h4 class="fact-number">590</h4>
+                        <h5 class="fact-name">Clients Worked</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/email.png" alt="Email icon" class="fact-icon">
+                        <h4 class="fact-number">22578</h4>
+                        <h5 class="fact-name">Email Send</h5>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- sponspor -->
+        <section class="our-sponspor">
+            <div class="sponspor-info">
+                <h3 class="section-title">Our Sponspors</h3>
+                <p class="text-lightgray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
+            <div class="sponspor-companies">
+                <img src="images/sponsors/spotify.png" alt="spotify">
+                <img src="images/sponsors/amazon.png" alt="amazon">
+                <img src="images/sponsors/google.png" alt="google">
+                <img src="images/sponsors/telerama.png" alt="telerama">
+                <img src="images/sponsors/figma.png" alt="figma">
             </div>
         </section>
     </main>
