all section and footer is added and also responsive for three type of screen

--- a/index.html
+++ b/index.html
@@ -42,8 +42,34 @@
             </div>
         </section>
         <!-- features we enjoy -->
-        <section>
-
+        <section class="feature-enjoy display-flex">
+            <div>
+                <h3 class="section-title">Features you will <br> love & enjoy</h3>
+                <p class="text-lightgray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <div class="feature-card">
+                    <h4 class="feature-card-title">Desktop & Mobile Version</h4>
+                    <p class="text-lightgray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-card">
+                    <h4 class="feature-card-title">Drag & Drop Builder</h4>
+                    <p class="text-lightgray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-card">
+                    <h4 class="feature-card-title">Awesome Modern Design</h4>
+                    <p class="text-lightgray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-card">
+                    <h4 class="feature-card-title">Super Easy to Edit</h4>
+                    <p class="text-lightgray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+            </div>
+            <div class="feature-architect">
+                <img src="images/architect.png" alt="Architect Girl">
+                <button class="btn-primary" id="experience-btn">
+                    <span id="experience-yr">10+Year</span><br>
+                    <span>Experience</span>
+                </button>
+            </div>
         </section>
         <!-- some facts -->
         <section class="some-facts">
@@ -96,7 +122,7 @@
         </section>
     </main>
     <footer>
-
+        <p class="footer-info text-gray">All rights reserved copyright@2023 startup landing page design</p>
     </footer>
 </body>
 </html>
